postfull spacing, fix Topic curr label

--- a/src/app/components/cards/PostFull.scss
+++ b/src/app/components/cards/PostFull.scss
@@ -106,7 +106,7 @@
 }
 
 .PostFull__body {
-  padding: 1rem 0 2rem 0;
+  padding: 1rem 0 1rem 0;
   clear: left;
   a {
     @extend .link;
